[tool.poetry]
name = "runekit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9,<3.10"
requests = "^2.25.1"
PySide2 = "^5.15.2"
Pillow = "^8.1.0"
sysv-ipc = [{ version="^1.1.0", platform="linux" }]
xcffib = [{ version="^0.11.1", platform="linux" }]
pyobjc-framework-Quartz = [{ version="7.1", platform="darwin" }]
pyobjc-framework-ApplicationServices = [{ version="7.1", platform="darwin" }]
pyobjc-framework-CoreText = [{ version="7.1", platform="darwin" }]
click = "^7.1.2"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
Cython = "^0.29.21"
black = "^20.8b1"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
